export enum TaskType {
    Surveillance,
    Transport
}